[project]
name = "mlc-llm-kg-encryption"
version = "0.1.0"
description = "Knowledge Graph Encryption with MLC LLM"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
        "mlc-llm",
        "tvm",
        "graphqlite>=0.3.5",
        "tqdm>=4.67.3",
        "questionary>=2.1.1",
        "ipykernel>=7.2.0",
]
# edit this to point to your wheels
[tool.uv.sources]
mlc-llm = { path = "wheels/mlc_llm-0.1.dev0-cp313-cp313-macosx_26_0_arm64.whl" }
tvm = { path = "wheels/tvm-0.24.dev0-py3-none-macosx_26_0_arm64.whl" }

